forward-auth/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forward-auth
spec:
  selector:
    matchLabels:
      app: forward-auth
  template:
    metadata:
      labels:
        app: forward-auth
    spec:
      imagePullSecrets:
        - name: docker-hub
      containers:
        - name: forward-auth
          image: mindmatrix/forward-auth:1.0.4
          ports:
            - containerPort: 4181
