forward-auth/k8s/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: forward-auth
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.gladeos.dev`)
      kind: Rule
      services:
        - name: forward-auth
          port: 4181
      middlewares:
        - name: default-headers
  tls:
    secretName: gladeos-dev-tls #production
